--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -13,6 +13,9 @@
         <li><a href="{% url 'prima_app:lista'%}">lista</a></li>
         <li><a href="{% url 'prima_app:chi_siamo'%}">chi siamo</a></li>
         <li><a href="{% url 'prima_app:variabili'%}">variabili</a></li>
+        <li><a href="{% url 'prima_app:if_else_if'%}">if_else_if</a></li>
+        <li><a href="{% url 'prima_app:es_if'%}">es_if</a></li>
+        <li><a href="{% url 'prima_app:es_for'%}">es_for</a></li>
     </ol>
 </body>
 </html>
