--- a/prima_app/templates/homepage.html
+++ b/prima_app/templates/homepage.html
@@ -7,6 +7,10 @@
     <title>homepage</title>
 </head>
 <body>
+{% extends "base.html"%}
+{%block title%}{{block.super}}|chi siamo{%endblock title%}
+{%block content%}
+{%endblock content%}
     <h1>Benvenuto</h1>
 </body>
 </html>
