--- a/prima_app/templates/lista.html
+++ b/prima_app/templates/lista.html
@@ -7,6 +7,10 @@
     <title>lista</title>
 </head>
 <body>
+{% extends "base.html"%}
+{%block title%}{{block.super}}|chi siamo{%endblock title%}
+{%block content%}
+{%endblock content%}
     <ol>
         <li>primo</li>
         <li>secondo</li>
