--- a/seconda_app/templates/if_else_elif.html
+++ b/seconda_app/templates/if_else_elif.html
@@ -26,6 +26,10 @@
     <title>Document</title>
 </head>
 <body>
+{% extends "base.html"%}
+{%block title%}{{block.super}}|chi siamo{%endblock title%}
+{%block content%}
+{%endblock content%}
     <b>var1 = {{ var1 }}</b><br/>
     <b>var2 = {{ var2 }}</b><br/>
     <b>var3 = {{ var3 }}</b><br/>
