--- a/prima_app/templates/homepage.html
+++ b/prima_app/templates/homepage.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homepage</title>
-</head>
-<body>
 {% extends "base.html"%}
-{%block title%}{{block.super}}|chi siamo{%endblock title%}
+{%block title%}{{block.super}}|homepage{%endblock title%}
 {%block content%}
-{%endblock content%}
+
     <h1>Benvenuto</h1>
-</body>
-</html>
+    {%endblock content%}
