--- a/prima_app/templates/variabili.html
+++ b/prima_app/templates/variabili.html
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>variabili</title>
-</head>
-<body>
 {% extends "base.html"%}
-{%block title%}{{block.super}}|chi siamo{%endblock title%}
+{%block title%}{{block.super}}|variabili{%endblock title%}
 {%block content%}
-{%endblock content%}
+
     <lo>
         <li>{{var1}}</li>
         <li>{{var2}}</li>
         <li>{{var3}}</li>
     </lo>
-</body>
-</html>
+    {%endblock content%}
