--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,17 @@
                 </div>
               </li>
 
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  prova_pratica_1
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'view_b'%}">view_b</a>
+                  <a class="dropdown-item" href="{% url 'view_c'%}">view_c</a>
+                  <div class="dropdown-divider"></div>
+                </div>
+              </li>
+
 
 
             <li class="nav-item">
