--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
                   prova_pratica_1
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'view_b'%}">view_b</a>
-                  <a class="dropdown-item" href="{% url 'view_c'%}">view_c</a>
+                  <a class="dropdown-item" href="{% url 'prova_pratica_1:view_b'%}">view_b</a>
+                  <a class="dropdown-item" href="{% url 'prova_pratica_1:view_c'%}">view_c</a>
                   <div class="dropdown-divider"></div>
                 </div>
               </li>
